# d2-stash-tracker

./: .gitignore  .gitmodules  LICENSE  README.md  package.json  pnpm-lock.yaml
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/strings/: chinese-overlay.json  commands.json  item-modifiers.json  item-runes.json  levels.json  monsters.json
src-tauri/data/strings/data/data/local/lng/strings/: bnet.json  item-nameaffixes.json  item-names.json  skills.json  ui-controller.json  ui.json  vo.json
src-tauri/data/strings/data/data/local/lng/strings/metadata/: metadata-comments-ui.json
src-tauri/data/strings/metadata/: metadata-audio-vo.json  metadata-comments-item-modifiers.json  metadata-comments-item-nameaffixes.json  metadata-comments-item-names.json  metadata-comments-monsters.json  metadata-comments-npcs.json  metadata-comments-objects.json  metadata-comments-skills.json  metadata-states.json
src-tauri/migrations/2023-05-14-230332_create_characters/: up.sql
src-tauri/resources/test/: test.d2s  test_character.json
src-tauri/src/: d2.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/d2/: model.rs  models.rs  parser.rs  save_file.rs
src/lib/: Import.svelte
