[package]
name = "d2-stash-tracker"
version = "0.0.1"
description = "A Tauri App"
authors = ["Trenton Strong (trentonstrong.com)"]
license = "MIT"
repository = "https://github.com/trentonstrong/d2-stash-tracker"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
diesel = { version = "2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
diesel_migrations = "2.1"
nom = "7.1"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
